# niiks-digital-garden

./: .gitignore  archive.html  hobbies.html  index.html  portfolio.html  reading.html  resume.html  tailwind-built.css  writing.html
Heymax-Planner/: .gitignore  LICENSE  README.md  bot.py  location_parser.py  openai_client.py  output.json  pyproject.toml  supa.py  userflow.md  workflow.md
Heymax-Planner/map/: README-map.md  locations.json  map.html  map.js
Heymax-Planner/scraper/: __init__.py  instagram_post_extractor.py  instagram_reel_extractor.py  tiktok_extractor.py  youtube_extracter.py
Heymax-Planner/tests/: __init__.py  conftest.py  test_extractors.py  test_integration.py  test_link_classifier.py  test_openai_client.py  test_supabase.py  test_workflow.py
Heymax-Planner/utils/: __init__.py  apify_client_config.py  link_classifier.py  workflow.py
case-studies/: 4-gram-language-model.html  _format_lions_icp.py  clinicconnect.html  fusion-scanner-tldr.html  fusion-scanner.html  heymax-planner.html  homework-1.html  homework-3.html  kita-communication-intervention-tldr.html  kita-communication-intervention.html  lions-befrienders-communications-plan.html  long-form.html  niik-case-study.html  nusmart-dining-case-study.html  pantry-pal.html  project.html  short-form.html  stoma-siting-cs4240.html  telegram-bot-heymax.html  ziq-chatbot.html
content-sources/: README.md
design-system/: NM4208_AY2526S1_NiikSeah_e0958068_LionsBefrienders_ICP.docx  README.md  SKILL.md  colors_and_type.css
ip/: AI.md  README.md  build.gradle
map/: map.html
public/: README.md
(+116 files in other folders)
