[project]
name = "heymax-trip-planner"
version = "0.1.0"
description = "HeyMax AI Itinerary Planner Telegram Bot with Data Extraction and OpenAI Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=20.0",
    "apify>=3.0.2",
    "youtube-transcript-api>=1.2.3",
    "dotenv>=0.9.9",
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "openai>=1.51.0",
    "opencv-python>=4.12.0.88",
    "easyocr>=1.7.2",
    "instaloader>=4.15",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "api: marks tests that require external API calls",
    "slow: marks tests as slow running",
]

